# Picomesh

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  setup-pico-sdk.sh
pico-mesh-demo/: CMakeLists.txt  README.md
pico-mesh-demo/include/: btstack_config.h
pico-mesh-demo/src/: main.c  mesh_proxy.gatt
